--- a/读书笔记/安国玺.md
+++ b/读书笔记/安国玺.md
@@ -72,7 +72,159 @@ let 和const  有助于提升代码的质量
 
 
 
+20210119读书笔记
 
+DOMContent  Loaded比window先执行
+
+this只允许静态绑定
+
+arguments 
+
+当你不知道传了多少个参数时,可以使用arguments来显示
+
+callee 指函数的本身
+
+arguments.callee 
+
+在严格模式下不允许使用
+
+delete
+
+变量关键字的优先级 
+
+const-->let -->var
+
+for, forEach, for in, for of 
 
  
+
+字符串的属性
+
+let str = 'abcdefg'
+
+replace 替换
+
+str = str.replace("" ,"替换")
+
+只能替换一个
+
+替换多个时使用正则表达式 
+
+str.replace(/a/g,'替换')
+
+slice截取  
+
+substring 截取 (从哪个开始,截取几个)
+
+split() 拆分为数组
+
+不传参会把每一个都拆出来,包含空格
+
+ str.split(",")
+
+toLowerCase() //转化为小写
+
+
+
+numbel方法
+
+parseInit 转换为数字
+
+parseInt  转为整数
+
+parseFliat 转为浮点数
+
+toFixed() 转为字符串,参数是保留几位小数
+
+symbol  
+
+定义的数据无法用for in 来访问
+
+不要使用关键字和保留字作为标识符和属性名,以确保兼容过去和未来的ECMAScript版本
+
+变量可以用于保存任何类型的数据
+
+数据类型
+
+原始类型 Undefind null Boolean NUmber String Symbol  
+
+复杂数据类型 Object  对象 是一种无序名值对的集合
+
+ECMAScript中不能定义自己的数据类型
+
+typeOf操作符
+
+确定是何种数据类型
+
+undefined 表示值未定义
+
+BooLean 表示值是布尔值
+
+String 表示值是字符串
+
+number 表示值为数值
+
+Object 表示值为对象 或null 
+
+function 表示值为函数
+
+symbol 表示值为字符
+
+typeof null 返回的是Object  特殊值null 被认为是一个对空对象的引用
+
+函数在ECMAScript 中被认为是对象并不代表一种数据类型. 可是函数也要自己特殊的属性
+
+UndeFined类型
+
+ UndeFined 类型 只用一个值undeFined 
+
+变量声明未被赋值为未定义
+
+增加undefined的目的是为了正式的明确空对象指针null和未初始化变量的区别
+
+null类型
+
+空  逻辑上表示一个空对象指针
+
+ Boolean 布尔值 类型是ECMAScript 中使用最频繁的类型之一,有两个字面true 和 false
+
+变量 ,作用域与内存
+
+ECMAScript变量可以包含两种不同类型的数据
+
+原始值和引用值.
+
+原始值就是最简单的数据,引用值则是由多个值构成的对象
+
+undeFined NUll Boolean Number String   Symbol 
+
+引用值是保存在内存中的对象.
+
+JavaSacript不允许直接访问内存位置
+
+因此也就不能直接操作对象所在的内存空间
+
+传递参数 函数外的值会被复制到函数内部的参数中
+
+在按值传递参数是,值会被复制到一个局部变量
+
+arguments对象中的一个槽位
+
+ECMAScript中函数的参数就是局部变量
+
+instanceof 操作符检测任何引用值和 Object 构造函数都会返回 true 
+
+局部作用域中定义的变量可用于在局部上?文中替换全局变量
+
+函数参数被认为是当前上?文中的变量，因此也跟上?文中的其他变量遵循相同的访问规则。
+
+任何变量（不管包含的是原始值还是引用值）都存在于某个执行上文中（也称为作用域）
+
+作用域决定了变量的生命周期,以及他们可以访问代码的那些部分
+
+
+
+
+
+
 
