--- a/读书笔记/安国玺.md
+++ b/读书笔记/安国玺.md
@@ -224,7 +224,97 @@ instanceof 操作符检测任何引用值和 Object 构造函数都会返回 tru
 
 
 
+### 20200120笔记 
 
+忽有狂徒夜磨刀,帝星飘摇荧惑高 !
+
+对象就是引用值,引用值就是对象
+
+对象被认为是某个特定引用类型的实例
+
+什么是特定引用类型的实例?
+
+引用类型是把数据和功能组织到一起的结构 
+
+构造函数就是用来创建新对象的函数
+
+let  new  = new Data () ; 
+
+时间对象
+
+Date.parse() 表示日期的字符串参数
+
+Date.UTC() 
+
+Date.now() 返回表示方法执行时日期和时间的毫秒数
+
+以上这些其实在使用new Date()是就已经被隐式的调用了
+
+toLocaleString()返回与浏览器运行的本地环境一致的日期和时间
+
+toString() 返回带时区信息的日期和时间
+
+VaueOf() 返回日期的毫秒数
+
+日期格式化
+
+toDateString() 显示日期中的周几,月,日,年
+
+toTimeString() 显示日期中的时分秒
+
+toLocaleDateString()显示日期中的时分面
+
+toLocaleTimeString()显示日期中的时分秒
+
+toUTCString() 显示完整的UTC日期
+
+时间的方法还有很多...
+
+RegExp 类型支持正则表达式
+
+//  --------更加简单  (patteren模式)
+
+使用元字符来声明正则表达式
+
+正则表达式有两种声明模式
+
+1,使用字面量声明  
+
+2 , 使用RegExp构造函数来创建
+
+主要方法
+
+exec() 主要用于配合捕获组使用
+
+只接受一个参数,即要应用模式的字符串
+
+test()方法 可以用于测试模式是否匹配
+
+/[a-zA-Z]/.test(afdf df )   
+
+正则表达式很深 --    没学懂
+
+原始值的包装类型
+
+三种特殊的引用类型:
+
+Boolean  Number string 
+
+instaceof 操作符
+
+可以用来判断是不是一个值
+
+Number 类型
+
+toFixed() 返回包含指定小数点位数的数值字符串
+
+toPrecision() 会根据情况返回最合理的输出结果
+
+isInteger() 用于辨别一个数值是否保存为整数
+
+
+
+ 
 
 
 
